refactor(geometry): 优化几何节点中的数据访问方法
- 将多个几何节点中的 get(index) 方法替换为更安全的 getFirst()/getLast() 方法
- 更新 PolylineData 和 PolygonProfileData 为 record 类型以简化数据结构
- 移除 BaseNode 和 Curve 等不再使用的导入依赖
- 统一多处代码中对列表首尾元素的访问方式
- 重构 Pattern Grid 相关文档中的布局生成器分类描述
- 优化曲线路径采样工具中的点列表访问逻辑