@@ -1,6 +1,8 @@
 package com.nodecraft.nodesystem.datatypes;
 
 import net.minecraft.util.math.Vec3d;
+import org.jspecify.annotations.NonNull;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -10,13 +12,12 @@ import java.util.stream.Collectors;
 /**
  * Represents a polyline defined by a sequence of points.
  */
-public class PolylineData {
-    private final List<Vec3d> points;
-
+public record PolylineData(List<Vec3d> points) {
     /**
      * Creates a PolylineData instance.
+     *
      * @param points The list of points defining the polyline. The list is copied.
-     * @throws NullPointerException if the points list or any point within it is null.
+     * @throws NullPointerException     if the points list or any point within it is null.
      * @throws IllegalArgumentException if the list contains fewer than 2 points.
      */
     public PolylineData(List<Vec3d> points) {
@@ -33,9 +34,11 @@ public class PolylineData {
 
     /**
      * Gets an unmodifiable view of the points in the polyline.
+     *
      * @return Unmodifiable list of points.
      */
-    public List<Vec3d> getPoints() {
+    @Override
+    public List<Vec3d> points() {
         return Collections.unmodifiableList(points);
     }
 
@@ -49,6 +52,7 @@ public class PolylineData {
 
     /**
      * Gets the total length of the polyline.
+     *
      * @return The length.
      */
     public double getLength() {
@@ -58,17 +62,18 @@ public class PolylineData {
         }
         return length;
     }
-    
+
     /**
      * Checks if the polyline is closed (start point equals end point).
+     *
      * @return true if closed, false otherwise.
      */
-     public boolean isClosed() {
-         return points.size() > 1 && points.get(0).equals(points.get(points.size() - 1));
-     }
+    public boolean isClosed() {
+        return points.size() > 1 && points.getFirst().equals(points.getLast());
+    }
 
     @Override
-    public String toString() {
+    public @NonNull String toString() {
         return "Polyline[" + points.stream().map(Vec3d::toString).collect(Collectors.joining(", ")) + "]";
     }
 
@@ -80,8 +85,4 @@ public class PolylineData {
         return Objects.equals(points, that.points);
     }
 
-    @Override
-    public int hashCode() {
-        return Objects.hash(points);
-    }
-} 
+}
