@@ -100,7 +100,7 @@ public class CapsuleOnPlaneNode extends BaseNode {
         List<Vector3d> points = new ArrayList<>();
         appendArc(points, center, basis, halfRectLength, 0.0d, -Math.PI * 0.5d, Math.PI * 0.5d, resolvedRadius, resolvedCapSegments, true);
         appendArc(points, center, basis, -halfRectLength, 0.0d, Math.PI * 0.5d, Math.PI * 1.5d, resolvedRadius, resolvedCapSegments, false);
-        points.add(new Vector3d(points.get(0)));
+        points.add(new Vector3d(points.getFirst()));
 
         PlaneData resolvedPlane = new PlaneData(center, basis.normal());
         outputValues.put(OUTPUT_POINTS_ID, ProfilePlaneUtils.toPointList(points));
