@@ -103,7 +103,7 @@ public class GearOnPlaneNode extends BaseNode {
                 .add(new Vector3d(basis.xAxis()).mul(Math.cos(angle) * radius))
                 .add(new Vector3d(basis.yAxis()).mul(Math.sin(angle) * radius)));
         }
-        points.add(new Vector3d(points.get(0)));
+        points.add(new Vector3d(points.getFirst()));
 
         PlaneData resolvedPlane = new PlaneData(center, basis.normal());
         outputValues.put(OUTPUT_POINTS_ID, ProfilePlaneUtils.toPointList(points));
