@@ -118,7 +118,7 @@ public class HeartOnPlaneNode extends BaseNode {
                 .add(new Vector3d(basis.xAxis()).mul(nx))
                 .add(new Vector3d(basis.yAxis()).mul(ny)));
         }
-        points.add(new Vector3d(points.get(0)));
+        points.add(new Vector3d(points.getFirst()));
 
         PlaneData resolvedPlane = new PlaneData(center, basis.normal());
         outputValues.put(OUTPUT_POINTS_ID, ProfilePlaneUtils.toPointList(points));
