@@ -102,7 +102,7 @@ public class RegularPolygonOnPlaneNode extends BaseNode {
                 .add(new Vector3d(basis.yAxis()).mul(Math.sin(angle) * resolvedRadius));
             points.add(point);
         }
-        points.add(new Vector3d(points.get(0)));
+        points.add(new Vector3d(points.getFirst()));
 
         PlaneData resolvedPlane = new PlaneData(center, basis.normal());
         outputValues.put(OUTPUT_POINTS_ID, ProfilePlaneUtils.toPointList(points));
